# gnome-emoji-picker

./: .gitignore  CMakeLists.txt  README.md  compile_flags.txt  emoji_picker.desktop
.cache/clangd/index/: emoji_loader.cpp.175F8D5B28F53A76.idx  emoji_loader.h.A0F9C174711FA2CD.idx  emoji_picker.cpp.1B514C818B9CED41.idx  emoji_picker.h.410E241A30EF7060.idx  main.cpp.EE009F1640A53313.idx
assets/: emojis.json
include/: emoji_loader.h  emoji_picker.h  emoji_picker_app.h
src/: emoji_loader.cpp  emoji_picker.cpp  emoji_picker_app.cpp  main.cpp
